# Computer-Vision-system

./: .gitignore  ClassLibraryDetector.csproj  Detector.cs  Form1.Designer.cs  Form1.cs  LICENSE  ModelInput.cs  ModelPrediction.cs  ONNXDetector.csproj  ONNXDetector.sln  Program.cs  README-packages-notes.txt  README.md  TestProject1.csproj  TestProject1.sln  WindowsFormsTestApp.csproj  app.config  compile-howto.txt  labels.txt  packages.config  requirements.txt
ConsoleApp1/: ConsoleApp1.sln
ConsoleApp1ML.ConsoleApp/: ConsoleApp1ML.ConsoleApp.csproj  ModelBuilder.cs  Program.cs
ConsoleApp1ML.Model/: ConsumeModel.cs  ModelInput.cs
Inception_trained_model/: Navod_vysvetlivky.txt  Train_command_to_anaconda.txt  detekce.py  detekce2.py
Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
UnityInterfaceConcept/: Assembly-CSharp-firstpass.csproj  Assembly-CSharp.csproj  UnityInterfaceConcept.sln
UnityInterfaceConcept/Assets/Materials/: GrayDark.mat  RedDark.mat
UnityInterfaceConcept/Assets/Scenes/: PlaceScene.unity
UnityInterfaceConcept/Assets/Scripts/: MovingBackground.cs  SceneController.cs  TypeSimController.cs  UITransitionController.cs
UnityInterfaceConcept/Logs/: ApiUpdaterCheck.txt
UnityInterfaceConcept/ProjectSettings/: ProjectSettings.asset
UnityInterfaceConcept/Temp/: CompilationLog.txt  UnityTempFile-01378dcd1ef854b27a1b319e224ea600  UnityTempFile-042886340bcde47f199c78f513a51ed4  UnityTempFile-16e81745634f94362b75aa5894429e45  UnityTempFile-18d45d4bac42a44a999a70dc114548f6  UnityTempFile-1eb61218b2c204443896178347e0d7f8  UnityTempFile-2214462e162374bd1893f877439620d4  UnityTempFile-22739d85c797345e39004acf32383eb2  UnityTempFile-2743447980f7f40b3949bda05bb8cedc  UnityTempFile-2dade96c738634d38a0b39104b506c75  UnityTempFile-30f8a80fb65b04c90bc18a4b0ed6c27c  UnityTempFile-3282bdc00c4c94ab3a77d8fb982b22af  UnityTempFile-3772e871c48364a66bf3b79a54e46e88  UnityTempFile-37f9486b6d86047bb885392fbbaaea51  UnityTempFile-41f0bbba983ea4fd2aaf93b781c2ba31  UnityTempFile-476928896d940497da62d26290f8134a  UnityTempFile-8134070e73b3f495ba7eaf3764a47366  UnityTempFile-83ba29e5dbebe4c0b90f448d136715c2  UnityTempFile-8c76710dad5694bd1bc9d620ac4afad0  UnityTempFile-90fce158081294b08b5fc9f3fd149611  UnityTempFile-94ba20ff6dde1456ca27ac1abf9c4058  UnityTempFile-9629feb2611924fd19c6b4115c3402fc  UnityTempFile-96b6cec8f7b004f21a37ca5976938ca3  UnityTempFile-9fed3153fcfab40ffb8e5bf419fd57fd  UnityTempFile-a04b6865e39c347a9b166b344621ee2a  UnityTempFile-ca4a37cd79a444d1091249ebb71b4143  UnityTempFile-cabab6e16752c4bb0b9d68f904615a9f  UnityTempFile-e175eadbf9b4944e49699de9beb8f5f1  UnityTempFile-e1d9debece07c4d00963b32668788bfa  UnityTempFile-e4094df09790d4418b817b2277a035f4  UnityTempFile-e87fcbc8c5ee84c258bc9a26f2b170aa  UnityTempFile-f309e3b4ff261493f8397557b8623b41  UnityTempFile-fb8aad8bc3e634a6ba97fc9c5f5c2173  workerlic
UnityInterfaceConcept/UserSettings/: EditorUserSettings.asset
WisonDocks/TestMode/: BASE.md  CLASSES.md  GRAPHICS.md
enhancedGoodBadLooker/: Program.cs  enhancedGoodBadLooker.csproj  enhancedGoodBadLooker.sln
enhancedGoodBadLookerML.ConsoleApp/: ModelBuilder.cs  Program.cs  enhancedGoodBadLookerML.ConsoleApp.csproj
enhancedGoodBadLookerML.Model/: ConsumeModel.cs  ModelInput.cs  ModelOutput.cs
resources/C++/: CMakeLists.txt  build_sln.bat
resources/C++/CppTrainDemo/src/: TrainDemo.cpp
resources/C++/Predictor/: CMakeLists.txt  CMakeSettings.json  Predictor.cpp  Predictor.h  build.bat  build_sln.bat  shared_lib.h
resources/C++/Predictor/headers/: Predictor.h
resources/C++/Predictor/libtorch/: build-hash
resources/C++/Predictor/libtorch/include/caffe2/core/: macros.h
resources/C++/Predictor/libtorch/include/nvfuser_resources/: block_reduction.h  broadcast.h  fp16_support.h  grid_reduction.h  helpers.h  random_numbers.h  tensor.h
resources/C++/Predictor/libtorch/share/cmake/Caffe2/: Caffe2Targets-debug.cmake  Caffe2Targets.cmake
resources/C++/Predictor/libtorch/share/cmake/Torch/: TorchConfig.cmake
resources/C++/Predictor/libtorch/share/cmake/fbgemm/: fbgemmLibraryConfig.cmake
resources/C++/Predictor/libtorch/share/cmake/fbjni/: fbjniLibraryConfig.cmake
resources/C++/Predictor/libtorch/share/doc/dnnl/: README
resources/C++/Predictor/src/: Main.cpp  Predictor.cpp
resources/C++/PredictorDll/: CMakeLists.txt  PredictLibrary.h  Predictor.cpp  PredictorDll.vcxproj  PredictorDll.vcxproj.filters  build.bat  build_sln.bat  dllmain.cpp  dllmain.h
resources/C++/PredictorDll/src/: dllmain.cpp
resources/C++/TorchTest/: CMakeLists.txt  CMakeSettings.json  TorchTest.cpp  TorchTest.h
resources/C++/numPredictor/headers/: dllmain.h
resources/C++/numPredictor/src/: dllmain.cpp
resources/CoordinateData/: coordData.txt  generatedTest.txt  initOptimizedMesh.txt  maNiceOne.txt  optimizedMesh.txt  pythonCoordinates.txt  skeletonLines.txt
resources/python/: cli_example.py  data_dir_and_label_info.txt  example.py  exampleV2.py  inseption.py  multichannel_demo.py  nn_numbers.py  num_model.pt  setup.py  test.py  train.py  trainV2.py  train_c.c  train_c.py  train_c.pyx
resources/python/new_vision_system/: TrainTemp.py  number_train.py  number_train_resnet.py  train.py
resources/python/pavel/: 04_Deep Neural Networks - MNIST.py  DataSampler.py  fileio.py  list.csv  test_datasampler.py  test_train.py
scr/ConsoleApp1/: ConsoleApp1.csproj  ConsoleApp1.sln  Program.cs
scr/Detector/: Detector.csproj  Detector.sln  Program.cs
scr/ModelMaker/: Maker.cs  MemoryPinning.cs  ModelMaker.csproj  Predictor.cs
scr/Predictor/: Predictor.cs
scr/PtInputData/: Class1.cs
scr/PtModelBase/: Class1.cs
scr/PtSample/: Program.cs
scr/PtTrainer/: Class1.cs
src/C#/Detector/: Program.cs
src/C++/CGAL_StraightSkeleton_Wrapper_CMAKE/: CMakeLists.txt  build_sln.bat
src/C++/CGAL_StraightSkeleton_Wrapper_CMAKE/src/: CGAL_StraightSkeleton_Wrapper.cpp  dllmain.cpp  stdafx.cpp
src/C++/PredictorDll/: CMakeLists.txt
src/C++/PredictorDll/src/: dllmain.cpp
src/Skeletonization/: Program.cs  Skeletonization.csproj  Skeletonization.sln
(+190 files in other folders)
